# emailingsystem-core

./: CMakeLists.txt  ISerialize.h  README.md  deserializer.cpp  deserializer.h  ideserialize.h  main.cpp  message.cpp  message.h  messagebuilder.cpp  messagebuilder.h  serializer.cpp  serializer.h  tests.cpp
